// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change the style 1`] = `
<DocumentFragment>
  <div
    class="css-fzcsno css-mr4uxt"
    data-chakra-component="CPseudoBox"
    data-testid="box"
  >
    Box Works
  </div>
</DocumentFragment>
`;

exports[`should display Box with type as header 1`] = `
<DocumentFragment>
  <header
    class="css-fzcsno css-fzcsno"
    data-chakra-component="CPseudoBox"
    data-testid="box"
  >
    Box Works
  </header>
</DocumentFragment>
`;

exports[`should display Box with type as p 1`] = `
<DocumentFragment>
  <p
    class="css-fzcsno css-fzcsno"
    data-chakra-component="CPseudoBox"
    data-testid="box"
  >
    Box Works
  </p>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-fzcsno css-fzcsno"
    data-chakra-component="CPseudoBox"
    data-testid="box"
  >
    Box Works
  </div>
</DocumentFragment>
`;
